@@ -1,0 +1,28 @@
+<?php
+/**
+ * Defines the AJAX interface for Turba.
+ *
+ * Copyright 2012 Horde LLC (http://www.horde.org/)
+ *
+ * See the enclosed file LICENSE for license information (ASL). If you
+ * did not receive this file, see http://www.horde.org/licenses/apache.
+ *
+ * @author   Michael Slusarz <slusarz@horde.org>
+ * @category Horde
+ * @license  http://www.horde.org/licenses/apache ASL
+ * @package  Turba
+ */
+class Turba_Ajax_Application extends Horde_Core_Ajax_Application
+{
+    /**
+     */
+    protected function _init()
+    {
+        global $registry;
+
+        if ($registry->getView() == $registry::VIEW_SMARTMOBILE) {
+            $this->addHelper(new Turba_Ajax_Application_Helper_Smartmobile());
+        }
+    }
+
+}
