@@ -38,6 +38,12 @@ class Turba_Application extends Horde_Registry_Application
 {
     /**
      */
+    public $features = array(
+        'smartmobileView' => true
+    );
+
+    /**
+     */
     public $version = 'H5 (4.0.0-git)';
 
     /**
