@@ -1,0 +1,14 @@
+/* Entry page. */
+#entry dt {
+    background-color: #ddd;
+    font-weight: bold;
+    margin-bottom: 15px;
+    padding: 4px;
+}
+#entry dd {
+    margin-bottom: 15px;
+}
+
+#turba-entry-buttonbar {
+    display: none;
+}
