@@ -2,6 +2,7 @@
 v4.0.0-git
 ----------
 
+[mms] Initial implementation of smartmobile view.
 
 
 -----------
